--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -22,11 +22,10 @@ body{
     font-weight: 600;
 }
 
-.card-title {
-    font-size: large;
-    font-weight: 600;
-}
-
 .card-subtitle {
     font-size: large;
+}
+
+a.active.nav-link {
+    font-weight: bold;
 }
