--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -1,5 +1,13 @@
-body{
-	padding: 0px;
+html, body {
+	height: 100vh;
+	margin: 0; padding: 0;  /* to avoid scrollbars */
+}
+
+#root{
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
 .se-pre-con {
