--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,26 @@
-#appBody{
-	
+.appBody{
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	width: 100%;
+}
+
+.wrapperColumn{
+    height: 100%;
+    width: 400px;
+
+	display: flex;  /* use the flex model*/
+	flex-direction: column;  /* learn more: http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/ */
+
+	flex-grow: 1 !important;
+    flex-shrink: 1 !important;
+    flex-basis: auto !important;
+}
+
+.columnBody{
+    flex: 1;
+    overflow: auto;
+
+    min-height: 300px
 }
