--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,10 @@
+.bottomright {
+	position: absolute;
+	bottom: 8px;
+	right: 16px;
+	font-size: 18px;
+  }
+
 .appBody{
 	height: 100%;
 	width: 100%;
