Add a translation for the gallery title + re-arrange the buttons related to image addtion

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -15,3 +15,11 @@
 .gallery{
     min-height: 58px;
 }
+
+.gallery-component-header{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-end;
+}
