--- a/src/components/Gallery/Thumbnail.css
+++ b/src/components/Gallery/Thumbnail.css
@@ -10,3 +10,8 @@
         -ms-transform: scale(1.05);
         transform: scale(1.05);
 }
+
+.spinnerContainer {
+    width: 100px;
+    display: inline-block;
+}
