--- a/src/components/PrivacyPolicyAcceptance/PrivacyPolicyAcceptance.css
+++ b/src/components/PrivacyPolicyAcceptance/PrivacyPolicyAcceptance.css
@@ -1,5 +1,11 @@
 .fixed-position-bottom-right{
 	position: fixed;
+  right: 8px;
+  bottom: 8px;
+}
+
+.fixed-position-centered{
+	position: fixed;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -7,8 +13,4 @@
 
 .very-top {
   z-index: 1050
-}
-
-.small-padding{
-  padding: 0.75rem;
 }
